update webpack, create pre-dashboard

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -1,18 +1,19 @@
+</html>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
+  <base href="/">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
-  <title>dashboard</title>
+  <meta charset="UTF-8">
+  <title>Dashboard</title>
 </head>
 
 <body>
   <div id="wrapper"></div>
-  <script src="/dist/build.js"></script>
 </body>
 
 </html>
