--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -1,11 +1,19 @@
+</html>
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>dashboard</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<html>
+
+<head>
+  <base href="/">
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+
+  <meta charset="UTF-8">
+  <title>Dashboard</title>
+</head>
+
+<body>
+  <div id="wrapper"></div>
+</body>
+
 </html>
